<resources>
    <string name="app_name">Calculator</string>
    <string name="editText">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="equal">=</string>
    <string name="division">/</string>
    <string name="decimal">.</string>
    <string name="clear">C</string>
    <string name="history_title">History</string>
    <string name="back_to_calculator">Back to Calculator</string>
    <string name="infinite">Infinite</string>
    <string name="invalid">Invalid Input</string>
    <string name="no_history">No History Found</string>
    <string name="sharedPref_Name">History</string>
    <string name="sharedPref_file_Name">History</string>
</resources>
